--- a/UASWebprog/public/user/user-style.css
+++ b/UASWebprog/public/user/user-style.css
@@ -217,23 +217,53 @@ hr {
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(255, 255, 255, 0.3); 
     width: 800px;
-    height: 500px;
+    height: 600px;
     background-color: rgba(169, 169, 169, 0.5); 
     color: white;
     text-align: center;
+    margin-bottom: 50px; 
 }
 
+
 .buy .food-img, .buy .menu-img {
-    width: 100%;
+    width: 80%;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.15);
 }
 
-.buy .quantity-control {
-    display: flex;
+.quantity-control {
     justify-content: space-between;
     align-items: center;
 }
+
+.quantity-control button {
+    border: none;
+    background-color: #3498db; 
+    color: #ffffff; 
+    padding: 10px;
+    border-radius: 5px; 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.3s; 
+}
+
+.quantity-control button:hover {
+    background-color: #2980b9;
+    transform: scale(1.1); 
+}
+
+#qty {
+    border: none;
+    background-color: #ecf0f1; 
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+    cursor: pointer;
+    text-align: center;
+    width: 70px;
+}
+
+
 
 .buy .price {
     font-size: 1.2em;
@@ -351,7 +381,7 @@ hr {
     align-items: center;
     font-size: 17px;
     margin-bottom: 20px;
-    background-color: #f8f9fa;
+    background-color: #faf8f8;
     border-radius: 5px;
 }
 
