--- a/UASWebprog/public/user/user-style.css
+++ b/UASWebprog/public/user/user-style.css
@@ -55,6 +55,11 @@
 
     .nav-option {
         margin: 0 20px; 
+    
+    }
+    .nav-link img {
+        margin-top: 40px;
+    
     }
 }
 
@@ -132,12 +137,18 @@ hr {
     max-width: 200px;
     border-radius: 10px;
     overflow: hidden;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.2);
     cursor: pointer;
-    transition: transform 0.3s;
+    background-color: white;
 }
 
+.homepage .text-center3 {
+    color: black;
+    font-family: monospace;
+    font-weight: bold;
+}
 .homepage .list-box img {
+    margin-top: 20px;
     width: 100%;
     height: auto;
     border-radius: 10px 10px 0 0;
@@ -152,6 +163,16 @@ hr {
     font-weight: bold;
     color: white;
 }
+
+.homepage .text-center1 {
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    font-size: 50px;
+    font-style: italic; 
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
+}
+
 
 
 /*PRODUCT*/
@@ -493,11 +514,19 @@ margin-right: 10px;
 }
 
 
+/* Gaya umum untuk gambar di .cart-title */
 .cart-title img {
-    height: 80px; 
+    height: 80px;
     width: 420px;
     margin-right: 10px;
 }
+
+@media only screen and (max-width: 600px) {
+    .cart-title img {
+        height: auto; 
+        width: 100%; 
+        margin-right: 0;
+}}
 
 .cart hr {
     border: 1px solid #ccc;
@@ -523,6 +552,8 @@ margin-right: 10px;
     width: 100%;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    background-color: white;
+    color: black;
 }
 
 .cart-table th,
@@ -578,3 +609,4 @@ margin-right: 10px;
     max-height: 20px;
     vertical-align: middle;
 }
+
