--- a/UASWebprog/public/user/user-style.css
+++ b/UASWebprog/public/user/user-style.css
@@ -59,7 +59,6 @@
     }
     .nav-link img {
         margin-top: 40px;
-    
     }
 }
 
@@ -317,6 +316,7 @@ hr {
 @media (max-width: 768px) {
     .buy .container {
         width: 100%;
+        height: 700px;
     }
 
     .buy .col-md-6 {
