--- a/UASWebprog/public/user/user-style.css
+++ b/UASWebprog/public/user/user-style.css
@@ -390,7 +390,7 @@ hr {
 .checkout-box,
 .checkout-header-table,
 .checkout-data-table {
-    background-color: rgba(255, 255, 255, 0.7); 
+    background-color: rgba(255, 255, 255, 0.8); 
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     padding: 20px;
@@ -511,6 +511,7 @@ margin-right: 10px;
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    color: black;
 }
 
 
