--- a/UASWebprog/public/user/user-style.css
+++ b/UASWebprog/public/user/user-style.css
@@ -33,6 +33,25 @@
     margin-top: 110px;
     
 }
+
+.navbar .notification-badge {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: red;
+    color: white;
+    padding: 5px 8px;
+    border-radius: 50%;
+    font-size: 12px;
+    margin-top: 30px;
+    margin-right: 200px;
+}
+@media only screen and (max-width: 768px) {
+    .navbar .notification-badge {
+        margin-top: 150px; 
+        margin-right: 450px; 
+    }
+}
 .nav-option {
     padding: 10px;
     cursor: pointer;
@@ -60,6 +79,7 @@
     .nav-link img {
         margin-top: 40px;
     }
+
 }
 
 /*HOMEPAGE*/
